Fixed: Globals/Colour Palette: Hex code for each swatch is using wrong font.

--- a/src/styles/color-swatch.styl
+++ b/src/styles/color-swatch.styl
@@ -53,7 +53,7 @@ color-swatch
 		
 	color-swatch-hex
 		display block
-		@extend p.alternate
+		@extend p
 		margin 0 0 10px 0
 		text-transform uppdercase
 		
